--- a/assets/scss/scss/_variables.scss
+++ b/assets/scss/scss/_variables.scss
@@ -33,8 +33,8 @@ $color-percent: 1.75%;
 $color-level: -10.5;
 
 $font-family-base: -apple-system,
-'Roboto',
 BlinkMacSystemFont,
+Roboto,
 'Segoe UI',
 'Helvetica Neue',
 Arial,
